<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    card_view:cardBackgroundColor="#EFEFEF"
    card_view:cardCornerRadius="8dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/equipment_image_equipmentItem"
            android:layout_width="75dp"
            android:layout_margin="4dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:contentDescription="@string/equipment_photo" />

        <TextView
            android:id="@+id/equipment_name_equipmentItem"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F8F8F8"
            android:gravity="center" />



        <androidx.appcompat.widget.AppCompatButton
            android:textSize="15sp"
            android:id="@+id/equipment_button_equipmentItem"
            android:text="Edit"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="#0C5190"
            android:gravity="center"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/equipment_checkbox_equipmentItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_distancing_feature" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/amount"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/equipment_numberOfEquipment_equipmentItem"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />




    </LinearLayout>
</LinearLayout>

</androidx.cardview.widget.CardView>